complete user creation
