# cmd/api/api.go
@@ -57,7 +57,7 @@ func (app *application) routes() http.Handler {
 
 		// User API
 		r.Route("/users", func(r chi.Router) {
-			r.Post("/", app.createUserHandler)
+			r.Put("/activate/{token}", app.activateUserHandler)
 
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
@@ -69,6 +69,10 @@ func (app *application) routes() http.Handler {
 			})
 		})
 
+		// Public routes
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
+		})
 	})
 
 	return r
